Thu Oct  4 19:02:11 UTC 2007  Ciju John  <johnc at ociweb dot com>

        Cleanup Named proxies upon disconnect.
        * orbsvcs/orbsvcs/Notify/Admin.h:
        * orbsvcs/orbsvcs/Notify/Admin.cpp:
        * orbsvcs/orbsvcs/Notify/EventChannel.h:
        * orbsvcs/orbsvcs/Notify/EventChannel.cpp:
        * orbsvcs/orbsvcs/Notify/MonitorControlExt/MonitorEventChannel.h:
        * orbsvcs/orbsvcs/Notify/MonitorControlExt/MonitorEventChannel.cpp:
        * orbsvcs/orbsvcs/Notify/ProxyConsumer.cpp:
        * orbsvcs/orbsvcs/Notify/ProxySupplier.cpp:
          - Add virtual method 'cleanup_proxy' to EC.
          - MonitorEventChannel::cleanup_proxy unbinds the name-ID
          association.
          - Add 'cleanup_proxy' to admin and make 'remove' private.
          'cleanup_proxy' now calls 'remove' and ec->cleanup_proxy
          - Consumer/Subscriber Proxies call admin::cleanup_proxy

        * orbsvcs/tests/unit/Notify/MC/MonitorControlExt/MonitorControlExt.cpp:
        * orbsvcs/tests/unit/Notify/MC/MonitorControlExt/README:
          Extend to test named proxy disconnect and recreation.

Mon Oct  1 18:57:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Property/run_test.pl:
        * orbsvcs/tests/Time/run_test.pl:
          Updated for cross platform testing

Fri Sep 28 00:04:19 UTC 2007  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * TAO-INSTALL.html: Fixed the links to "ACE installation notes" so
          they point to the right place.  Thanks to Matthew Gillen
          <mgillen at bbn dot com> for reporting this.

Thu Sep 27 04:28:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/union.idl:
          Extended SunCC workaround to also include Sun Studio 12

Wed Sep 26 06:11:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/GIOP_Message_Base.cpp:
          dump_msg only works with debug level >= 5, so corrected all places
          where this method is called.
