@@ -1,0 +1,11 @@
+/* -*- C++ -*- $Id$ */
+
+// messenger.idl
+
+interface Messenger
+    {
+        boolean send_message ( in    string user_name,
+                               in    string subject,
+                               inout string message );
+    };
+
