@@ -1,0 +1,13 @@
+project(*Server): taoexe, portableserver, security, ssl {
+  Source_Files {
+    Messenger_i.cpp
+    MessengerServer.cpp
+  }
+}
+
+project(*Client): taoexe, security, ssl {
+  Source_Files {
+    MessengerC.cpp
+    MessengerClient.cpp
+  }
+}
